# BioRiskEval

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets-nb.baseline  .secrets.baseline  CODEOWNERS  Dockerfile  README.md  README_bionemo.md  justfile  pyproject.toml  requirements-cve.txt  requirements-dev.txt  tach.toml
.devcontainer/: devcontainer.json  initializeCommand.sh
.github/: codecov.yml  (+2 more)
sub-packages/bionemo-amplify/: README.md  pyproject.toml
sub-packages/bionemo-amplify/src/bionemo/amplify/: convert.py  datamodule.py  dataset.py  hf_rotary.py  infer_amplify.py  model.py  tokenizer.py  train_amplify.py
sub-packages/bionemo-amplify/tests/bionemo/amplify/: test_convert.py  test_datamodule.py  test_dataset.py  test_hf_rotary.py  test_infer_amplify.py  test_model.py  test_tokenizer.py  test_train_amplify.py
sub-packages/bionemo-evo2/: README.md  pyproject.toml
sub-packages/bionemo-evo2/examples/: .gitignore  fine-tuning-tutorial.ipynb  zeroshot_brca1.ipynb
sub-packages/bionemo-evo2/examples/configs/: README.md
sub-packages/bionemo-evo2/src/bionemo/evo2/data/: README.md  fasta_dataset.py  preprocess.py  tokenizer.py  transcript_extraction.py
sub-packages/bionemo-evo2/src/bionemo/evo2/run/: infer.py  predict.py  train.py
sub-packages/bionemo-evo2/src/bionemo/evo2/utils/: __init__.py  config.py
sub-packages/bionemo-evo2/src/bionemo/evo2/utils/checkpoint/: README.md  convert_checkpoint_model_parallel_evo2.py  convert_to_nemo.py  convert_zero3_to_zero1.py  params.py  zero3_conversion_lib.py
sub-packages/bionemo-evo2/tests/bionemo/evo2/: test_evo2.py  test_prompt.py  test_stop_and_go.py
sub-packages/bionemo-evo2/tests/bionemo/evo2/data/: prompts.csv  test_fasta_dataset.py  test_preprocess.py  test_tokenizer.py
sub-packages/bionemo-evo2/tests/bionemo/evo2/run/: test_infer.py  test_inference.py  test_predict.py  test_train.py
sub-packages/bionemo-llm/: pyproject.toml
sub-packages/bionemo-llm/src/bionemo/llm/: api.py  lightning.py  train.py
sub-packages/bionemo-llm/src/bionemo/llm/data/: datamodule.py
sub-packages/bionemo-llm/src/bionemo/llm/model/: config.py  layers.py  loss.py
sub-packages/bionemo-llm/src/bionemo/llm/model/biobert/: lightning.py  model.py  transformer_specs.py
sub-packages/bionemo-llm/src/bionemo/llm/run/: config_models.py
sub-packages/bionemo-llm/src/bionemo/llm/utils/: callbacks.py  datamodule_utils.py  logger_utils.py  megatron_utils.py  remote.py  weight_utils.py
sub-packages/bionemo-llm/tests/bionemo/llm/: test_lightning.py
sub-packages/bionemo-llm/tests/bionemo/llm/data/: test_datamodule.py
sub-packages/bionemo-llm/tests/bionemo/llm/model/: test_loss.py
sub-packages/bionemo-llm/tests/bionemo/llm/utils/: test_logger_utils.py
sub-packages/bionemo-moco/: README.md  blog.md  documentation.md  pyproject.toml
sub-packages/bionemo-moco/environment/: Instructions.md  clone_bionemo_moco.sh  moco_env.yaml
sub-packages/bionemo-moco/examples/: continuous_data_interpolant_tutorial_cfm.ipynb  continuous_data_interpolant_tutorial_ddpm.ipynb  continuous_data_interpolant_tutorial_vdm.ipynb  discrete_data_interpolant_tutorial.ipynb  ot_sampler_tutorial.ipynb
sub-packages/bionemo-moco/scripts/: README.md  clean_documentation.py  create_documentation.sh
sub-packages/bionemo-moco/src/bionemo/moco/: __init__.py
sub-packages/bionemo-moco/src/bionemo/moco/distributions/prior/: __init__.py  distribution.py
sub-packages/bionemo-moco/src/bionemo/moco/distributions/prior/continuous/: gaussian.py  harmonic.py  utils.py
sub-packages/bionemo-moco/src/bionemo/moco/distributions/prior/discrete/: custom.py  mask.py  uniform.py
sub-packages/bionemo-moco/src/bionemo/moco/distributions/time/: __init__.py  beta.py  distribution.py  logit_normal.py  uniform.py  utils.py
sub-packages/bionemo-moco/src/bionemo/moco/interpolants/: __init__.py  base_interpolant.py  batch_augmentation.py
sub-packages/bionemo-moco/src/bionemo/moco/interpolants/continuous_time/continuous/: continuous_flow_matching.py  vdm.py
sub-packages/bionemo-moco/src/bionemo/moco/interpolants/continuous_time/discrete/: discrete_flow_matching.py  mdlm.py
sub-packages/bionemo-moco/src/bionemo/moco/interpolants/discrete_time/: utils.py
sub-packages/bionemo-moco/src/bionemo/moco/interpolants/discrete_time/continuous/: ddpm.py
sub-packages/bionemo-moco/src/bionemo/moco/interpolants/discrete_time/discrete/: d3pm.py
sub-packages/bionemo-moco/src/bionemo/moco/schedules/: inference_time_schedules.py  utils.py
sub-packages/bionemo-moco/src/bionemo/moco/schedules/noise/: continuous_noise_transforms.py  continuous_snr_transforms.py  discrete_noise_schedules.py
sub-packages/bionemo-moco/src/bionemo/moco/testing/: parallel_test_utils.py
sub-packages/bionemo-moco/tests/bionemo/moco/: test_env.py
sub-packages/bionemo-moco/tests/bionemo/moco/distributions/time/: test_time_distribution.py
sub-packages/bionemo-moco/tests/bionemo/moco/schedules/: test_inference_schedules.py
sub-packages/bionemo-moco/tests/bionemo/moco/schedules/noise/: test_continuous_noise_transforms.py  test_continuous_snr_transforms.py  test_discrete_noise_schedule.py
sub-packages/bionemo-noodles/: Cargo.toml  README.md  pyproject.toml
sub-packages/bionemo-noodles/src/bionemo/noodles/: __init__.py  nvfaidx.py
sub-packages/bionemo-testing/: pyproject.toml
sub-packages/bionemo-testing/src/bionemo/testing/: lightning.py  megatron_parallel_state_utils.py  subprocess_utils.py  testing_callbacks.py  torch.py  utils.py
sub-packages/bionemo-testing/src/bionemo/testing/data/: fasta.py  load.py
sub-packages/bionemo-testing/src/bionemo/testing/harnesses/: stop_and_go.py
sub-packages/bionemo-testing/tests/bionemo/testing/: test_megatron_parallel_state_utils.py
sub-packages/bionemo-testing/tests/bionemo/testing/data/: test_fasta.py
(+494 files in other folders)
