[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bionemo-moco"
readme = "README.md"
description = "BioNeMo Modular Co-Design: Making building Diffusion and Flow Matching generative models easier"
authors = [{ name = "BioNeMo Team", email = "bionemofeedback@nvidia.com" }]
requires-python = ">=3.10"
license = { file = "LICENSE" }
dynamic = ["version"]
dependencies = [
    # bionemo sub-packages
    # external
    'torch>=2.2',
    'numpy>=1.24.4,<2',    #needed for notebooks
    'jaxtyping>=0.2.34',
    'pot>=0.9.5',          #needed for optimal transport
    'scikit-learn>=1.6.0', #needed for notebooks
    'matplotlib>=3.3.2'    #needed for notebooks
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["bionemo.*"]
namespaces = true
exclude = ["test*."]

[tool.setuptools.dynamic]
version = { file = "VERSION" }

[tool.uv]
cache-keys = [{ git = true }]
