[package]
name = "noodles_fasta_wrapper"
version = "0.1.2"   # Also update the VERSION file when you change the version!
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "noodles_fasta_wrapper"  # The name of the library
path = "rust/src/lib.rs"        # Path to the library file

[dependencies]
pyo3 = { version = "0.24", features = ["extension-module"] }
noodles-fasta = "0.45.0"  # Update to the latest version of noodles
noodles-core = "*"
memmap2 = "*"

[package.metadata.pyo3]
name = "noodles_fasta_wrapper"
